--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -31,8 +31,8 @@
               </td>
               <td>
                 <input type="number" class="text-center quantity" name="" id="" value="{{product.quantity}}" disabled>
-                <span class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></span>
-                <span class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></span>
+                <a href="" class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></a>
+                <a href="" class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></a>
               </td>
               <td>
                 <div class="cart-amount">
