--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -19,7 +19,7 @@
       <div class="inner-consults">
         <div class="row">
 
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image v-top">
                 <img src="img/consulting/analysis.png" alt="" class="img-responsive">
@@ -31,7 +31,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image v-top">
                 <img src="img/consulting/wardrobe.png" alt="" class="img-responsive">
@@ -45,7 +45,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image v-top">
                 <img src="img/consulting/grooming.png" alt="" class="img-responsive">
@@ -57,7 +57,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image v-top">
                 <img src="img/consulting/shopping.png" alt="" class="img-responsive">
@@ -71,7 +71,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image v-top">
                 <img src="img/consulting/make-up.png" alt="" class="img-responsive">
@@ -83,7 +83,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image">
                 <img src="img/consulting/styling.png" alt="" class="img-responsive">
@@ -97,7 +97,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image v-top">
                 <img src="img/consulting/hair.png" alt="" class="img-responsive">
@@ -109,7 +109,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 ">
             <div class="single-consult">
               <div class="consult-image v-top">
                 <img src="img/consulting/accessories.png" alt="" class="img-responsive">
