--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1150,7 +1150,7 @@ button {
 //end cart///
 ////Login//////
 .login-tab {
-  height: 400px;
+  min-height: 400px;
   form {
     margin: 30px 0 0;
     input {
