--- a/views/content/home.html
+++ b/views/content/home.html
@@ -286,7 +286,7 @@
             <h3 class="text-uppercase brand-brown-dark2 font-semibold">About us</h3>
             <h5 class="font-semibold">Only the fit know how fabulous it feels.</h5>
             <p class="text-justify">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
-            <div class="more">
+            <div class="more btn-center">
               <a href="#/aboutus" class="text-uppercase btn btn-primary">know more</a>
             </div>
           </div>
