--- a/views/header.html
+++ b/views/header.html
@@ -42,12 +42,12 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-4 col-xs-6">
+              <div class="col-md-3 col-sm-4">
                 <div class="contact-tel letter-space">
                   <a class="font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-md-3 col-sm-3">
                 <div class="signin letter-space text-right">
                   <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
                 </div>
