integration start, getSlide1

--- a/views/content/home.html
+++ b/views/content/home.html
@@ -5,7 +5,7 @@
         <img ng-src="{{slide.img}}">
         <div class="slider-info get-center text-center">
           <h2 class="text-uppercase brand-primary font-semibold">{{slide.title}}</h2>
-          <p>{{slide.descp}}</p>
+          <p>{{slide.description}}</p>
           <button class="text-uppercase btn btn-primary" type="button">Know more</button>
         </div>
       </div>
